# Yew-and-React-comparison

./: README.md
react-performance/: package-lock.json  package.json
react-performance/src/: App.js  index.css
react-performance/src/components/CompanyTable/: CompanyTable.js  CompanyTable.module.css  CompanyTable.test.js
react-performance/src/components/ControlPanel/: ControlPanel.js  ControlPanel.module.css  ControlPanel.test.js
react-performance/src/model/: company.js
rust-performance/: .gitignore  Cargo.toml  index.scss
rust-performance/src/: app.rs  main.rs
rust-performance/src/components/: company_table.rs  control_panel.rs  mod.rs
rust-performance/src/extensions/: js_html_event.rs  js_html_input_field.rs  mod.rs  search_text_filterable_trait.rs
rust-performance/src/model/: company.rs
